# Camelot

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  a.out  conanfile.txt  main.cpp  setup.ps1  setup.sh
.github/workflows/: .pre-commit-config.yaml  build.yaml  build_linux.yaml  build_windows.yaml  main.yml  pre-commit.yaml
Avalon/: CMakeLists.txt  main.cpp  pch.h
Avalon/src/: CMakeLists.txt
Avalon/src/device/: CMakeLists.txt  Device.cpp  Device.h  Instance.cpp  Instance.h
Avalon/src/main/: Avalon.cpp  Avalon.h  CMakeLists.txt
Avalon/src/utils/: CMakeLists.txt  Initializers.hpp
Avalon/src/validation/: CMakeLists.txt  CheckResult.h  ValidationLayers.cpp  ValidationLayers.h
Avalon/src/window/: CMakeLists.txt  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Camelot/: CMakeLists.txt
Camelot/API/: CMakeLists.txt  ICamelot.h
Camelot/API/data/: IDataEvent.h
Camelot/API/extensions/: IExtension.h
Camelot/API/main/: CMakeLists.txt  ICamelot.h
Camelot/CamelotAPI/: ICamelot.h
Camelot/src/: CMakeLists.txt
Camelot/src/main/: CMakeLists.txt  MainModel.cpp  MainModel.h
CamelotExec/: main.cpp
CamelotLib/: CMakeLists.txt
CamelotLib/CamelotLib/: CamelotInterface.h
CamelotLib/src/: CMakeLists.txt  CamelotInterface.h
Excalibur/: CMakeLists.txt
Excalibur/main/: Excalibur.cpp  Excalibur.h
Excalibur/src/: Excalibur.h
LICENSES/: LICENSE  code_header
Merlin/: CMakeLists.txt
Merlin/src/: CMakeLists.txt
Merlin/src/main/: CMakeLists.txt  Merlin.cpp  Merlin.h
Nimue/: CMakeLists.txt
Nimue/API/: Nimue.cpp  Nimue.h
Nimue/src/main/: CMakeLists.txt
Pendragon/: CMakeLists.txt
Pendragon/src/: main.cpp
Tests/: CMakeLists.txt  test_main.cpp
docker/: Dockerfile
scripts/linux/: runStaticAnalysis.sh  setup.sh
scripts/linux/cfg/: uncrustify.cfg
scripts/windows/: setup.ps1
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
